updated env file with mongoDB atlas connection

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/imdb-clone 
-SESSION_SECRET='23BIT0002@kushArora'
+MONGO_URI=mongodb+srv://kusharora2004:Chicklet%400211@cluster0.pfzifwt.mongodb.net/imdb-clone?retryWrites=true&w=majority&appName=Cluster0
+SESSION_SECRET=23BIT0002@kushArora
