--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=5000
 MONGO_URI=mongodb+srv://kusharora2004:Chicklet%400211@cluster0.pfzifwt.mongodb.net/imdb-clone?retryWrites=true&w=majority&appName=Cluster0
 SESSION_SECRET=23BIT0002@kushArora
+OMDB_API_KEY=228b48c4
+TMDB_API_KEY=2e1ee69b814f88e54efdef84927bc4b3
+CLIENT_ORIGIN=https://webflix-s6lm.onrender.com
